--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-h1{
+#principal{
     font-family: initial;
     font-size: xx-large;
-    font-weight: 900;
+    font-weight: 1000;
     font-style: italic;
     text-align: center;
     color: brown;
@@ -9,8 +9,8 @@ h1{
     line-height: 0cap;
     
 }
-body{
-    background-image: url(pink-iphone-736-x-1309-background-4baf4mkdfyhxszm5.jpg);
+#rosa{
+    background-image: url(img2.jpg);
     background-position: center;
     background-size: 100%;
 }
@@ -19,4 +19,16 @@ h2{
     color: brown;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     
+}
+div{
+    font-family: 'Times New Roman', Times, serif;
+}
+.enfatizar{
+    color: blue;
+    font-style: italic;
+}
+.corpo{
+    background-image: url(img7.jpg);
+    text-align: center;
+    font-weight: 00;
 }
